--- a/index.html
+++ b/index.html
@@ -59,12 +59,13 @@
 
     <!-- Success message end -->
 
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://github.com/leon-bw">Leon Williams</a>.
+    </div>
+  </footer>
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/leon-bw">Leon Williams</a>.
-  </div>
-
   <script src="script.js"></script>
 </body>
 </html>
