--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
           <li>And much more!</li>
         </ul>
 
-        <form action="" class="card__form">
-          <small for="" class="card__label">Email Address</small>
+        <form action="#" class="card__form">
+          <small class="card__label">Email Address</small>
           <span class="card__error hidden">error</span>
           <input id="email" type="email" name="email" placeholder="email@company.com">
           <button type="submit" class="btn">Subscribe to monthly newsletter</button>
